[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Principal.gd" type="Script" id=2]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Principal" type="Node"]
script = ExtResource( 2 )
cena_mob = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="TempoMob" type="Timer" parent="."]
wait_time = 0.3

[node name="TempoPontuacao" type="Timer" parent="."]

[node name="TempoInicio" type="Timer" parent="."]

[node name="PosicaoInicio" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="CaminhoDosMob" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="localizacaoDoSpawDoMob" type="PathFollow2D" parent="CaminhoDosMob"]

[node name="camadaCanvasHud" parent="." instance=ExtResource( 4 )]

[connection signal="batida" from="Player" to="." method="_on_Player_batida"]
[connection signal="timeout" from="TempoMob" to="." method="_on_TempoMob_timeout"]
[connection signal="timeout" from="TempoPontuacao" to="." method="_on_TempoPontuacao_timeout"]
[connection signal="timeout" from="TempoInicio" to="." method="_on_TempoInicio_timeout"]
[connection signal="btn_apertado" from="camadaCanvasHud" to="." method="_on_camadaCanvasHud_btn_apertado"]
